--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,3 +112,34 @@ header {
     text-decoration: none;
     color: black;
 }
+
+#info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 30px;
+    padding: 40px 20px;
+}
+
+.infoContainer {
+    width: 45%;
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+}
+
+.infoContainer h2 {
+    font-size: 2rem; 
+    font-weight: bold; 
+    text-transform: uppercase; 
+    letter-spacing: 2px; 
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); 
+    margin-bottom: 10px; 
+}
+
+.separator {
+    width: 1px; 
+    height: 300px; 
+    background-color: white; 
+}
