--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,3 +2,4 @@
 @import url(/assets/css/header.css);
 @import url(/assets/css/footer.css);
 @import url(/assets/css/home.css);
+@import url(/assets/css/info.css);
