--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,3 +3,4 @@
 @import url(/assets/css/footer.css);
 @import url(/assets/css/home.css);
 @import url(/assets/css/info.css);
+@import url(/assets/css/test.css);
