--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,3 +4,4 @@
 @import url(/assets/css/home.css);
 @import url(/assets/css/info.css);
 @import url(/assets/css/test.css);
+@import url(/assets/css/contact.css);
