--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
-@import url(./assets/css/reset.css);
-@import url(./assets/css/header.css);
-@import url(./assets/css/footer.css);
-@import url(./assets/css/home.css);
-@import url(./assets/css/info.css);
-@import url(./assets/css/test.css);
-@import url(./assets/css/contact.css);
+@import url("reset.css");
+@import url("header.css");
+@import url("footer.css");
+@import url("home.css");
+@import url("info.css");
+@import url("test.css");
+@import url("contact.css");
